first commit event